crates/pixi_build_discovery/tests/snapshots/discovery__direct_package_xml.snap
---
source: crates/pixi_build_discovery/tests/discovery.rs
expression: backend
---
backend-spec:
  type: json-rpc
  name: pixi-build-ros
  command:
    type: environment-spec
    requirement:
      - pixi-build-ros
      - "*"
    channels:
      - "https://prefix.dev/conda-forge"
init-params:
  workspace-root: "file://<ROOT>/"
  build-source: ~
  source-anchor: "file://<ROOT>/ros-package"
  manifest-path: "file://<ROOT>/ros-package"
  project-model:
    name: ~
    buildStringPrefix: ~
    buildNumber: ~
    version: ~
    description: ~
    authors: ~
    license: ~
    licenseFile: ~
    readme: ~
    homepage: ~
    repository: ~
    documentation: ~
    targets: ~
  configuration: ~
  target-configuration: ~
