crates/pixi_build_discovery/tests/snapshots/discovery__discovery@nested_recipe_yml.snap
---
source: crates/pixi_build_discovery/tests/discovery.rs
expression: backend
input_file: tests/data/discovery/nested_recipe_yml/TEST-CASE
---
backend-spec:
  type: json-rpc
  name: pixi-build-rattler-build
  command:
    type: environment-spec
    requirement:
      - pixi-build-rattler-build
      - "*"
    channels:
      - "https://conda.anaconda.org/conda-forge"
      - "https://prefix.dev/pixi-build-backends"
init-params:
  workspace-root: file://<ROOT>
  source-dir: "[SOURCE_PATH]"
  manifest-path: recipe/recipe.yml
  project-model: ~
  configuration: ~
  target-configuration: ~
