crates/pixi_build_discovery/tests/snapshots/discovery__discovery@simple.snap
---
source: crates/pixi_build_discovery/tests/discovery.rs
assertion_line: 81
expression: backend
input_file: tests/data/discovery/simple/TEST-CASE
---
backend-spec:
  type: json-rpc
  name: pixi_build_backend
  command:
    type: environment-spec
    requirement:
      - pixi_build_backend
      - "*"
    channels:
      - "https://prefix.dev/pixi-build-backends"
init-params:
  workspace-root: "file://<ROOT>/simple"
  build-source: ~
  source-anchor: "file://<ROOT>/simple"
  manifest-path: "file://<ROOT>/simple/pixi.toml"
  project-model:
    name: simple
    buildStringPrefix: ~
    buildNumber: ~
    version: 0.1.0
    description: ~
    authors: ~
    license: ~
    licenseFile: ~
    readme: ~
    homepage: ~
    repository: ~
    documentation: ~
    targets:
      defaultTarget:
        hostDependencies: {}
        buildDependencies: {}
        runDependencies: {}
        runConstraints: {}
      targets: {}
  configuration: ~
  target-configuration: ~
