crates/pixi_build_discovery/tests/snapshots/discovery__non_existing.snap
---
source: crates/pixi_build_discovery/tests/discovery.rs
expression: error_to_snapshot(& err)
---
  × failed to discover a valid project manifest, the source path '/non-existing' could not be found
