crates/pixi_build_discovery/tests/snapshots/discovery__ros_discovery_priority.snap
---
source: crates/pixi_build_discovery/tests/discovery.rs
expression: backend
---
backend-spec:
  type: json-rpc
  name: pixi-build-rattler-build
  command:
    type: environment-spec
    requirement:
      - pixi-build-rattler-build
      - "*"
    channels:
      - "https://prefix.dev/conda-forge"
init-params:
  workspace-root: "file://<ROOT>/ros-priority"
  build-source: ~
  source-anchor: "file://<ROOT>/ros-priority"
  manifest-path: "file://<ROOT>/ros-priority/recipe.yaml"
  project-model: ~
  configuration: ~
  target-configuration: ~
